# huffman

./: CMakeLists.txt
include/jc/: jc.hpp
include/jcbasic/: jcbasic.hpp
include/jcbasic_fastercount/: jcbasic_fastercount.hpp
include/jcdod/: jcdod.hpp
include/jcindex/: jcindex.hpp
include/jcindex_fastercount/: jcindex_fastercount.hpp
resources/: input.txt
script/: bench.sh
src/jc/: jc.cpp
src/jc_arr/: jc_arr.cpp  jc_arr.hpp
src/jc_vec/: jc_vec.cpp  jc_vec.hpp
src/jcbasic/: jcbasic.cpp
src/jcbasic_fastercount/: jcbasic_fastercount.cpp
src/jcdod/: jcdod.cpp
src/mementar/: mementar.cpp  mementar.hpp
test/: benchmark.cpp  test_jcdod.cpp
